# gemini-image-mcp

./: .env.example  .gitignore  pyproject.toml
src/gemini_image_mcp/: __init__.py  server.py
